<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/create_meeting_fragment"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    tools:context=".Ui.CreateMeetingActivity.CreateMeetingActivity"
    android:layout_gravity="center_vertical">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/subject_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="serif"
        android:padding="@dimen/text_view_padding"
        android:text="@string/title_subject_text_view"
        android:textAlignment="center"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="@dimen/text_view_size"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/create_meeting_subject_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_start_to_center_item"
        android:layout_marginEnd="@dimen/margin_end_to_center_item"
        android:fontFamily="serif"
        android:textAlignment="center"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="14sp"
        android:textStyle="bold"
        />

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="@dimen/divider_height"
        android:layout_margin="@dimen/divider_margin"
        android:background="@color/colorPrimaryDark" />


    <TextView
        android:id="@+id/meeting_time_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="serif"
        android:padding="@dimen/text_view_padding"
        android:text="@string/title_date_time_text_view"
        android:textAlignment="center"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="@dimen/text_view_size"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/date_selector_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorPrimary"
            android:clickable="true"
            android:text="@string/button_select_date_text"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="@dimen/button_text_size" />

        <Button
            android:id="@+id/time_selector_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorPrimary"
            android:clickable="true"
            android:text="@string/button_select_time_text"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="@dimen/button_text_size" />
    </LinearLayout>

    <View
        android:id="@+id/divider2"
        android:layout_width="match_parent"
        android:layout_height="@dimen/divider_height"
        android:layout_margin="@dimen/divider_margin"
        android:background="@color/colorPrimaryDark" />

    <TextView
        android:id="@+id/meeting_room_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="serif"
        android:padding="@dimen/text_view_padding"
        android:text="@string/title_meeting_room_text_view"
        android:textAlignment="center"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="@dimen/text_view_size"
        android:textStyle="bold" />

    <Spinner
        android:id="@+id/roomSpinner_sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_start_to_center_item"
        android:layout_marginEnd="@dimen/margin_end_to_center_item" />

    <View
        android:id="@+id/divider3"
        android:layout_width="match_parent"
        android:layout_height="@dimen/divider_height"
        android:layout_margin="@dimen/divider_margin"
        android:background="@color/colorPrimaryDark" />

    <TextView
        android:id="@+id/contributor_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="serif"
        android:padding="@dimen/text_view_padding"
        android:text="@string/title_contributor_text_view"
        android:textAlignment="center"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="@dimen/text_view_size"
        android:textStyle="bold" />

    <Button
        android:id="@+id/contributor_selector_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_start_to_center_item"
        android:layout_marginEnd="@dimen/margin_end_to_center_item"
        android:backgroundTint="@color/colorPrimary"
        android:clickable="true"
        android:text="@string/button_select_contributor_text"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="@dimen/button_text_size" />

    <TextView
        android:id="@+id/list_contributor_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_start_to_center_item"
        android:layout_marginEnd="@dimen/margin_end_to_center_item"
        android:fontFamily="serif"
        android:padding="@dimen/list_meeting_padding_size"
        android:text="toto@lamzone.com"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="@dimen/list_meeting_text_size"
        android:textStyle="bold"
        android:visibility="gone" />

    <View
        android:id="@+id/divider4"
        android:layout_width="match_parent"
        android:layout_height="@dimen/divider_height"
        android:layout_margin="@dimen/divider_margin"
        android:background="@color/colorPrimaryDark" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/cancel_create_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_cancel_text" />

        <Button
            android:id="@+id/create_meeting_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorPrimary"
            android:fontFamily="sans-serif"
            android:text="@string/button_validate_meeting_text"
            android:textColor="@android:color/white"
            android:textSize="@dimen/button_text_size"
            android:textStyle="bold" />
    </LinearLayout>

</LinearLayout>
</ScrollView>