<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Ui.MainActivity.MainActivity">

    <LinearLayout
...
            android:layout_height="match_parent"
            android:scrollbars="vertical" />

    </LinearLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/add_meeting_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/add_meeting_fab_margin_end"
        android:layout_marginBottom="@dimen/add_meeting_fab_margin_bottom"
        android:layout_weight="1"
        android:backgroundTint="@color/colorFabAddMeeting"
...
